--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="timer">TIMER</string>
     <string name="numScan"># TO SCAN</string>
     <string name="appTitle">Delta Scan</string>
-    <string name="time">TIME: </string>
+    <string name="time">TIME: 0.0s</string>
     <string name="count">COUNT: </string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
